[package]
name = "pectralizer"
version = "0.3.0"
edition = "2024"

[dependencies]
# alloy
alloy-primitives = "1.1.0"
alloy-provider = "0.15.10"
alloy-consensus = "0.15.10"
alloy-chains = "0.2.0"

# revm
revm = "23.1.0"

# axum
axum = "0.8.4"

# misc
tokio = { version = "1.45", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.219"
reqwest = { version = "0.12.15", features = ["json"] }
eyre = "0.6.12"
thiserror = "2.0.12"
tower-http = {version = "0.6.2", features = ["cors"] }
rustc-hash = "2.1.1"
rusqlite = { version = "0.35", features = ["bundled"] }
